--- a/satelite_images.ipynb
+++ b/satelite_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=256x256>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -49,20 +49,20 @@
    "source": [
     "data= tf.keras.utils.image_dataset_from_directory(\n",
     "    \"D:\\\\python codes\\\\ML\\\\data1\\\\data\",\n",
-    "    image_size=(32,32),\n",
+    "    image_size=(64,64),\n",
     "    color_mode=\"rgb\",\n",
-    "    batch_size=50000\n",
+    "    batch_size=5000\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "cnn_model=tf.keras.Sequential([\n",
-    "    layers.Conv2D(9,3,padding=\"same\",activation=\"leaky_relu\",input_shape=(32,32,3)),\n",
+    "    layers.Conv2D(9,3,padding=\"same\",activation=\"leaky_relu\",input_shape=(64,64,3)),\n",
     "    layers.MaxPool2D(),\n",
     "    layers.Conv2D(18,3,padding=\"same\",activation=\"leaky_relu\"),\n",
     "    layers.MaxPool2D(),\n",
@@ -78,56 +78,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d (Conv2D)             (None, 32, 32, 9)         252       \n",
+      " conv2d_6 (Conv2D)           (None, 64, 64, 9)         252       \n",
       "                                                                 \n",
-      " max_pooling2d (MaxPooling2D  (None, 16, 16, 9)        0         \n",
-      " )                                                               \n",
-      "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 16, 16, 18)        1476      \n",
-      "                                                                 \n",
-      " max_pooling2d_1 (MaxPooling  (None, 8, 8, 18)         0         \n",
+      " max_pooling2d_6 (MaxPooling  (None, 32, 32, 9)        0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " conv2d_2 (Conv2D)           (None, 8, 8, 36)          5868      \n",
+      " conv2d_7 (Conv2D)           (None, 32, 32, 18)        1476      \n",
       "                                                                 \n",
-      " max_pooling2d_2 (MaxPooling  (None, 4, 4, 36)         0         \n",
+      " max_pooling2d_7 (MaxPooling  (None, 16, 16, 18)       0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 576)               0         \n",
+      " conv2d_8 (Conv2D)           (None, 16, 16, 36)        5868      \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 64)                36928     \n",
+      " max_pooling2d_8 (MaxPooling  (None, 8, 8, 36)         0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 10)                650       \n",
+      " flatten_2 (Flatten)         (None, 2304)              0         \n",
       "                                                                 \n",
-      " softmax (Softmax)           (None, 10)                0         \n",
+      " dense_4 (Dense)             (None, 64)                147520    \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 10)                650       \n",
+      "                                                                 \n",
+      " softmax_2 (Softmax)         (None, 10)                0         \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 45,174\n",
-      "Trainable params: 45,174\n",
+      "Total params: 155,766\n",
+      "Trainable params: 155,766\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "cnn_model.build(input_shape=(1,32,32,3))\n",
+    "cnn_model.build(input_shape=(1,64,64,3))\n",
     "cnn_model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,54 +140,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20\n",
-      "113/113 [==============================] - 7s 38ms/step - loss: 0.8249 - accuracy: 0.6974\n",
-      "Epoch 2/20\n",
-      "113/113 [==============================] - 4s 38ms/step - loss: 0.2628 - accuracy: 0.8746\n",
-      "Epoch 3/20\n",
-      "113/113 [==============================] - 4s 38ms/step - loss: 0.2452 - accuracy: 0.8847\n",
-      "Epoch 4/20\n",
-      "113/113 [==============================] - 4s 39ms/step - loss: 0.2433 - accuracy: 0.8883\n",
-      "Epoch 5/20\n",
-      "113/113 [==============================] - 4s 39ms/step - loss: 0.2243 - accuracy: 0.8940\n",
-      "Epoch 6/20\n",
-      "113/113 [==============================] - 4s 39ms/step - loss: 0.2251 - accuracy: 0.8979\n",
-      "Epoch 7/20\n",
-      "113/113 [==============================] - 4s 39ms/step - loss: 0.1850 - accuracy: 0.9162\n",
-      "Epoch 8/20\n",
-      "113/113 [==============================] - 4s 38ms/step - loss: 0.1477 - accuracy: 0.9357\n",
-      "Epoch 9/20\n",
-      "113/113 [==============================] - 4s 38ms/step - loss: 0.1423 - accuracy: 0.9407\n",
-      "Epoch 10/20\n",
-      "113/113 [==============================] - 4s 39ms/step - loss: 0.1439 - accuracy: 0.9403\n",
-      "Epoch 11/20\n",
-      "113/113 [==============================] - 5s 40ms/step - loss: 0.1311 - accuracy: 0.9442\n",
-      "Epoch 12/20\n",
-      "113/113 [==============================] - 5s 46ms/step - loss: 0.1220 - accuracy: 0.9519\n",
-      "Epoch 13/20\n",
-      "113/113 [==============================] - 5s 44ms/step - loss: 0.1259 - accuracy: 0.9510\n",
-      "Epoch 14/20\n",
-      "113/113 [==============================] - 4s 39ms/step - loss: 0.1166 - accuracy: 0.9544\n",
-      "Epoch 15/20\n",
-      "113/113 [==============================] - 5s 40ms/step - loss: 0.1275 - accuracy: 0.9474\n",
-      "Epoch 16/20\n",
-      "113/113 [==============================] - 5s 40ms/step - loss: 0.1093 - accuracy: 0.9570\n",
-      "Epoch 17/20\n",
-      "113/113 [==============================] - 5s 41ms/step - loss: 0.1037 - accuracy: 0.9583\n",
-      "Epoch 18/20\n",
-      "113/113 [==============================] - 5s 40ms/step - loss: 0.1021 - accuracy: 0.9565\n",
-      "Epoch 19/20\n",
-      "113/113 [==============================] - 5s 40ms/step - loss: 0.1363 - accuracy: 0.9449\n",
-      "Epoch 20/20\n",
-      "113/113 [==============================] - 4s 39ms/step - loss: 0.1036 - accuracy: 0.9588\n",
-      "(5631, 32, 32, 3) (5631, 10)\n"
+      "Epoch 1/10\n",
+      "100/100 [==============================] - 16s 136ms/step - loss: 0.5881 - accuracy: 0.7290\n",
+      "Epoch 2/10\n",
+      "100/100 [==============================] - 13s 135ms/step - loss: 0.2601 - accuracy: 0.8812\n",
+      "Epoch 3/10\n",
+      "100/100 [==============================] - 13s 134ms/step - loss: 0.2237 - accuracy: 0.8968\n",
+      "Epoch 4/10\n",
+      "100/100 [==============================] - 14s 135ms/step - loss: 0.2197 - accuracy: 0.9016\n",
+      "Epoch 5/10\n",
+      "100/100 [==============================] - 14s 137ms/step - loss: 0.1812 - accuracy: 0.9180\n",
+      "Epoch 6/10\n",
+      "100/100 [==============================] - 14s 136ms/step - loss: 0.1668 - accuracy: 0.9272\n",
+      "Epoch 7/10\n",
+      "100/100 [==============================] - 14s 136ms/step - loss: 0.1394 - accuracy: 0.9376\n",
+      "Epoch 8/10\n",
+      "100/100 [==============================] - 14s 138ms/step - loss: 0.1359 - accuracy: 0.9390\n",
+      "Epoch 9/10\n",
+      "100/100 [==============================] - 14s 136ms/step - loss: 0.1115 - accuracy: 0.9518\n",
+      "Epoch 10/10\n",
+      "100/100 [==============================] - 13s 134ms/step - loss: 0.1079 - accuracy: 0.9550\n",
+      "(5000, 64, 64, 3) (5000, 10)\n"
      ]
     }
    ],
@@ -195,14 +175,14 @@
     "for features,labels in data:\n",
     "    features=tf.divide(features,255)\n",
     "    labels=tf.one_hot(labels,10)\n",
-    "    record=cnn_model.fit(features,labels,batch_size=50,epochs=20)\n",
+    "    record=cnn_model.fit(features,labels,batch_size=50,epochs=10)\n",
     "    print(features.shape, labels.shape)\n",
     "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
